--- a/.gitattributes
+++ b/.gitattributes
@@ -207,3 +207,4 @@ webapp/TargetedMS/lorikeet_0.3/js/jquery.flot.js -text
 webapp/TargetedMS/lorikeet_0.3/js/jquery.flot.selection.js -text
 webapp/TargetedMS/lorikeet_0.3/js/peptide.js -text
 webapp/TargetedMS/lorikeet_0.3/js/specview.js -text
+webapp/TargetedMS/unimod/unimod.xml -text
