--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@ resources/schemas/dbscripts/postgresql/targetedms-12.27-12.28.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.28-12.29.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.30-13.10.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.10-13.11.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-13.11-13.12.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -45,6 +46,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-12.27-12.28.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.28-12.29.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.30-13.10.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.10-13.11.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-13.11-13.12.sql -text
 resources/schemas/targetedms.xml -text
 src/META-INF/targetedms/jars.txt -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
