--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ resources/schemas/dbscripts/postgresql/targetedms-13.10-13.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.20-13.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.21-13.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.22-13.23.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-13.30-13.31.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -71,6 +72,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-13.10-13.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.20-13.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.21-13.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.22-13.23.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-13.30-13.31.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
 src/org/labkey/targetedms/SkylineDocImporter.java -text
