--- a/.gitattributes
+++ b/.gitattributes
@@ -205,6 +205,7 @@ src/org/labkey/targetedms/view/AnnotationUIDisplayColumn.java -text
 src/org/labkey/targetedms/view/ChromatogramsDataRegion.java -text
 src/org/labkey/targetedms/view/DocumentPrecursorsView.java -text
 src/org/labkey/targetedms/view/DocumentTransitionsView.java -text
+src/org/labkey/targetedms/view/IconFactory.java -text
 src/org/labkey/targetedms/view/LibraryPrecursorViewWebPart.java -text
 src/org/labkey/targetedms/view/ModifiedPeptideHtmlMaker.java -text
 src/org/labkey/targetedms/view/PeptideGroupViewWebPart.java -text
@@ -237,7 +238,12 @@ test/src/org/labkey/test/tests/TargetedMSLibraryTest.java -text
 test/src/org/labkey/test/tests/TargetedMSTest.java -text
 webapp/TargetedMS/images/ChromatogramLibraryScreenshot.png -text
 webapp/TargetedMS/images/Fragment.gif -text
+webapp/TargetedMS/images/Peptide.gif -text
+webapp/TargetedMS/images/PeptideLib.gif -text
 webapp/TargetedMS/images/TransitionGroup.gif -text
+webapp/TargetedMS/images/TransitionGroupLib.gif -text
+webapp/TargetedMS/images/blank.gif -text
+webapp/TargetedMS/images/spectrum.gif -text
 webapp/TargetedMS/jquery/jquery-1.8.3.min.js -text
 webapp/TargetedMS/lorikeet_0.3/css/lorikeet.css -text
 webapp/TargetedMS/lorikeet_0.3/images/lorikeet/header_lorikeet.png -text
