--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,7 @@ resources/schemas/dbscripts/postgresql/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.13-14.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.14-14.15.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-14.15-14.16.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -91,6 +92,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.13-14.14.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.14-14.15.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-14.15-14.16.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/IrtPeptide.java -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
